fixing text color on visited buttons and other little things like link visibility

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -19,13 +19,22 @@ pre {
 }
 
 a {
-  color: #000;
+  color: green;
   &:visited {
-    color: #666;
+    color: green;
+  }
+  &:hover {
+    color: blue;
+  }
+}
+
+a.btn {
+  color: #fff;
+  &:visited {
+    color: #fff;
   }
   &:hover {
     color: #fff;
-    background-color: #000;
   }
 }
 
